# Docuchat

./: .gitignore  GITHUB_DEPLOYMENT.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  simple_app.py  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
docuchat/: __init__.py
docuchat/core/: __init__.py  document.py  rag.py  validator.py
docuchat/ui/: app.py
services/: chat_service.py  document_service.py
static/: script.js  style.css
templates/: index.html
ui/: components.py
utils/: session_manager.py
