[project]
name = "docuchat"
version = "0.1.0"
description = "Chat with your documents using LangChain + Groq AI"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.10",
    "langchain-core>=1.2.17",
    "langchain-groq>=1.1.2",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "streamlit>=1.55.0",
]
